--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,7 +25,7 @@
 	"homeYourConferencesBtn": "To the dashboard",
 	"homeDraftDisclaimerHeader": "Page Under Construction",
 	"homeDraftDisclaimer": "This page is still in the process of being developed. Please understand that not all features are available yet and that there may be errors. We are working hard in our spare time to further develop the application.",
-	"homeDraftPleaseHelp": "To provide you with the best experience, we rely on your help: If you have a suggestion or notice a bug, problem, or error, please report it through our feedback board.",
+	"homeDraftPleaseHelp": "To provide you with the best possible experience, we rely on your help: If you have suggestions or notice a bug, problem, or error, please report it through our feedback board.",
 	"homeHelpWithTechnicalIssuesHeadline": "Help with Technical Issues",
 	"homeHelpWithTechnicalIssues": "If you are experiencing technical issues, feel free to contact us. We are happy to assist you personally as well. Please reach out to the participant support of the respective project or send an email to <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Our conferences",
@@ -93,11 +93,11 @@
 	"deleteDelegation": "Delete Delegation",
 	"transferHeadDelegateship": "Transfer Head Delegateship",
 	"completeSignup": "Complete Registration",
-	"completeSignupDescriptionHeadDelegate": "Please complete all tasks and then confirm your registration for the delegation. Once you have completed all tasks, the Head Delegate can complete the registration and participate in the selection process. Once the registration is complete, it cannot be changed back – so please make sure that all information is correct and to your delegations satisfaction.",
-	"completeSignupDescription": "Please complete all tasks with your Head Delegate. Afterwards the Head Delegate can confirm the registration for the delegation.",
-	"completeSignupButton": "Complete registration and participate in the selection process",
-	"conpleteSignupWarningHeading": "Important: Complete online registration",
-	"conpleteSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
+	"completeSignupDescriptionHeadDelegate": "Please complete all tasks and then confirm your application for the delegation. Once you have completed all tasks, you can complete the application and participate in the selection process. Once the application is completed, it cannot be changed – so please make sure that all information is correct and to your delegations satisfaction.",
+	"completeSignupDescription": "Please complete all tasks with your Head Delegate. Afterwards the Head Delegate can complete the application for the delegation.",
+	"completeSignupButton": "Complete application and participate in the selection process",
+	"conpleteSignupWarningHeading": "Important: Complete online application",
+	"conpleteSignupWarningText": "Although you have already created a delegation or joined one, the application is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
 	"todoCreateDelegation": "Create delegation",
 	"todoInvitePeople": "Invite people",
 	"todoInvitePeopleHelp": "Invite additional members to your delegation. The minimum required number of members is 2.",
@@ -131,7 +131,7 @@
 	"myAccount": "Mein Konto",
 	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
 	"completeData": "Daten Vervollständigen",
-	"completeDataExplaination": "Vielen Dank für deine Registrierung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
+	"completeDataExplaination": "Thank you for your application. Please fill in all personal information to complete the application. Once you click save, you will be automatically forwarded.",
 	"personalData": "Persönliche Daten",
 	"phoneNumber": "Telefonnummer",
 	"address": "Addresse",
@@ -182,9 +182,9 @@
 	"yourPreferences": "Your Preferences",
 	"yourPreferencesDescription": "By specifying the preferences listed here, you participate in the selection process. You can change the order of the preferences by clicking on the arrows. Please provide at least 3 preferences.",
 	"noPreferencesSet": "No preferences has been set yet",
-	"completeSignupConfirmation": "Do you really want to complete the registration? Once completed, you will not be able to make any changes.",
-	"completeSignupSuccess": "Registration Successfully Completed",
-	"completeSignupSuccessDescription": "Your registration has been successfully completed. You are now participating in the selection process. The selection process will take place after the registration phase ends and may take some time. You will be informed of the results via email. Please refrain from making inquiries.",
+	"completeSignupConfirmation": "Do you really want to complete the application? Once completed, you will not be able to make any changes.",
+	"completeSignupSuccess": "Application Successfully Completed",
+	"completeSignupSuccessDescription": "Your application has been successfully completed. You are now participating in the selection process. The selection process will take place after the application phase ends and may take some time. You will be informed of the results via email. Please refrain from making inquiries.",
 	"noDangerZoneOptions": "Since you already completed the registration, you can neither leave nor delete the delegation. If you experience any trouble, please contact the participant care",
 	"noDangerZoneOptionsSingleParticipants": "Since you have already completed the online registration, you cannot leave or delete your individual application. If you experience any problems, please contact participant support.",
 	"profileSettings": "Profile Settings",
@@ -228,7 +228,7 @@
 	"presentAtConference": "Present at the conference",
 	"registeredAsSupervisor": "You are logged in as a supervisor and can monitor the status of your delegations here. If you want to add more delegations, simply follow the registration process again.",
 	"addAnotherDelegation": "Add another delegation",
-	"noConferenceOpenForRegistration": "No conference open for registration",
+	"noConferenceOpenForRegistration": "No conference open for application",
 	"noConferenceOpenForRegistrationText": "There are currently no conferences you can register for. Please check the respective conference website for registration periods.",
 	"rotateCode": "Rotate Code",
 	"codeRotated": "The code has been rotated",
