🗺️ i18n (App Frontend): Updates by Amselfass branch: Branch not found

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,22 +11,22 @@
 	"version": "Version",
 	"sha": "SHA",
 	"back": "Back",
-	"backToHome": "Back To Home",
+	"backToHome": "Back to Home",
 	"committee": "Committee",
-	"noConferenceHeading": "No Conference",
+	"noConferenceHeading": "No conference",
 	"noConferenceText": "It seems like you did not register for a conference yet.",
 	"homeHeroSub": "Central registration platform for DMUN conferences",
 	"home": "Home",
 	"homeRegistration": "Conference registration",
 	"homeRegistrationSub": "Register for the next conference by applying",
-	"homeRegistrationBtn": "To register",
+	"homeRegistrationBtn": "Go to Registration",
 	"homeYourConferences": "Your conferences",
 	"homeYourConferencesSub": "View the conferences you are attending",
-	"homeYourConferencesBtn": "To the dashboard",
-	"homeDraftDisclaimerHeader": "Page Under Construction",
+	"homeYourConferencesBtn": "Go to Dashboard",
+	"homeDraftDisclaimerHeader": "Page under construction",
 	"homeDraftDisclaimer": "This page is still in the process of being developed. Please understand that not all features are available yet and that there may be errors. We are working hard in our spare time to further develop the application.",
 	"homeDraftPleaseHelp": "To provide you with the best experience, we rely on your help: If you have a suggestion or notice a bug, problem, or error, please report it through our feedback board.",
-	"homeHelpWithTechnicalIssuesHeadline": "Help with Technical Issues",
+	"homeHelpWithTechnicalIssuesHeadline": "Help with technical issues",
 	"homeHelpWithTechnicalIssues": "If you are experiencing technical issues, feel free to contact us. We are happy to assist you personally as well. Please reach out to the participant support of the respective project or send an email to <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Our conferences",
 	"homeAboutUs": "About us",
@@ -52,28 +52,28 @@
 	"joinDelegationDescription": "Here you can join a delegation with a code issued to you by the head of delegation.",
 	"individualApplication": "Individual application",
 	"individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
-	"individualApplicationDescription2": "Hier können Sie sich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn Sie nicht für die Rolle genommen werden, werden wir mit Ihnen Kontakt aufnehmen und eine andere Rolle vorschlagen.",
+	"individualApplicationDescription2": "Here you can apply individually for a special role. Special roles are not tied to delegations. If your application is not successful, we will get in contact with you to assign another role.",
 	"supervisor": "Supervisor",
 	"supervisors": "Supervisors",
-	"supervisorDelegationDescription": "Betreuer*innen können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie die Teilnehmendenbetreuung, wenn sich Ihrer Delegation ein*e Betreuer*in unerwartet angeschlossen hat.",
+	"supervisorDelegationDescription": "Supervisors can monitor the status of your delegation.",
 	"applyAsSupervisor": "Apply as Supervisor",
 	"applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support.",
 	"infos": "Infos",
-	"questionnaire": "Fragebogen",
-	"review": "Überprüfen",
-	"invite": "Einladen",
+	"questionnaire": "Questionnaire",
+	"review": "Review",
+	"invite": "Invite",
 	"createDelegationProcessExplaination": "<p class='max-ch-md'>Sie sind im Begriff, eine Delegation anzulegen. Nachdem Sie eine Delegation angelegt haben, können Sie Delegationspartner*innen einladen und sich geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Sie werden automatisch als Delegationsleiter*in eingetragen. Sie können auch eine betreuende Person eintragen, die Sie bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachten Sie, dass Sie sich nicht alleine auf eine Delegation bewerben können. Wenn Sie sich alleine bewerben möchten, schauen Sie <a href='./individual' class='link underline'>hier</a> nach Einzelplätzen, auf die Sie sich bewerben können. Außerdem hilft Ihnen die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt finden Sie auf der Website der jeweiligen Konferenz. </p>",
-	"next": "Weiter",
+	"next": "Continue",
 	"pleaseAnswerTheFollowingQuestions": "Bitte beantworten Sie zunächst die folgenden Fragen. Sie können die Antworten vor der Anmeldung noch ändern.",
 	"whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommen Sie (bzw. die Mehrheit Ihrer Delegation)?",
 	"whichSchoolDoYouComeFrom": "Which school / institution do you come from?",
-	"answerHere": "Antwort hier eingeben",
+	"answerHere": "Enter your answer here",
 	"whyDoYouWantToJoinTheConference": "Warum bewirbt sich Ihre Delegation bei der Konferenz?",
 	"whyDoYouWantToJoinTheConferenceSingleParticipant": "Why are you applying for these roles at the conference?",
 	"howMuchExperienceDoesYourDelegationHave": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügen Sie/Ihre Delegation?",
 	"howMuchExperienceDoesYourDelegationHaveSingleParticipant": "How much experience do you have with political simulation games such as Model United Nations?",
 	"pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
-	"conference": "Konferenz",
+	"conference": "Conference",
 	"schoolOrInstitution": "Schule / Institution",
 	"motivation": "Motivation",
 	"experience": "Erfahrung",
