--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://inlang.com/schema/inlang-message-format",
 	"signup": "Anmelden",
-	"registerNow": "Jetzt Anmelden",
+	"registerNow": "Jetzt anmelden",
 	"dashboard": "Dashboard",
 	"registration": "Anmeldung",
 	"admininstration": "Administration",
@@ -30,7 +30,7 @@
 	"homeHelpWithTechnicalIssues": "Wenn Sie technische Probleme haben, helfen wir Ihnen gerne auch persönlich weiter. Wenden Sie sich dafür entweder an die Teilnehmendenbetreuung des jeweiligen Projektes oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
 	"homeAboutUs": "Über uns",
-	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet, und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
+	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
 	"selectConference": "Wählen Sie zuerst die Konferenz aus, zu der Sie sich gerne anmelden möchten.",
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
@@ -41,7 +41,7 @@
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
-	"conferenceSignupIntroduction": "Sie haben verschiedene Möglichkeiten, sich anzumelden. Auf einen Staat oder eine*n nichtstaatliche*n Akteur*in bewerben Sie sich als Team von mindestens 2 Personen. Auf Spezielle Rollen wie als Mitglied der Konferenzpresse bewerben Sie sich alleine.",
+	"conferenceSignupIntroduction": "Sie haben verschiedene Möglichkeiten, sich anzumelden. Auf einen Staat oder eine*n nichtstaatliche*n Akteur*in bewerben Sie sich als Team von mindestens 2 Personen. Auf spezielle Rollen wie als Mitglied der Konferenzpresse bewerben Sie sich alleine.",
 	"signUpAssistant": "Anmeldeassistent",
 	"signUpAssistantDescription": "Der Anmeldeprozess kann auf den ersten Blick kompliziert wirken. Nutzen Sie den Anmeldeassistenten, um einen Überblick zu erhalten.",
 	"openAssistant": "Assistent starten",
@@ -55,7 +55,7 @@
 	"individualApplicationDescription2": "Hier können Sie sich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn Sie nicht für die Rolle genommen werden, werden wir mit Ihnen Kontakt aufnehmen und eine andere Rolle vorschlagen.",
 	"supervisor": "Betreuer*in",
 	"supervisors": "Betreuer*innen",
-	"supervisorDelegationDescription": "Betreuer können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie das Teilnehmerbetreuungsteam, wenn sich Ihrer Delegation unerwartet ein Betreuer angeschlossen hat.",
+	"supervisorDelegationDescription": "Betreuer*innen können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie die Teilnehmendenbetreuung, wenn sich Ihrer Delegation unerwartet ein*e Betreuer*in angeschlossen hat.",
 	"applyAsSupervisor": "Anmelden als Betreuer*in",
 	"applyAsSupervisorDescription": "Hier kannst du dich als Betreuer*in für eine Delegation anmelden. Als Betreuer*in hast du Einsicht in alle deine Delegationen und kannst sie organisatorisch unterstützen.",
 	"infos": "Infos",
@@ -70,16 +70,16 @@
 	"answerHere": "Antwort hier eingeben",
 	"whyDoYouWantToJoinTheConference": "Warum bewirbt sich Ihre Delegation bei der Konferenz?",
 	"whyDoYouWantToJoinTheConferenceSingleParticipant": "Warum bewerben Sie sich bei der Konferenz auf diese Rollen?",
-	"howMuchExperienceDoesYourDelegationHave": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügen Sie/Ihre Delegation?",
+	"howMuchExperienceDoesYourDelegationHave": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügen Sie / Ihre Delegation?",
 	"howMuchExperienceDoesYourDelegationHaveSingleParticipant": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügen Sie?",
-	"pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
+	"pleaseCheckYourAnswers": "Bitte überprüfen Sie noch einmal Ihre Angaben.",
 	"conference": "Konferenz",
 	"schoolOrInstitution": "Schule / Institution",
 	"motivation": "Motivation",
 	"experience": "Erfahrung",
 	"delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
 	"nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
-	"orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+	"orShareThisCode": "Oder teile mit ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
 	"inviteMorePeople": "Mehr Menschen einladen",
 	"inviteMorePeopleDescription": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
 	"linkCopied": "Link kopiert",
@@ -94,7 +94,7 @@
 	"transferHeadDelegateship": "Delegationsleitung übertragen",
 	"completeSignup": "Anmeldung abschließen",
 	"completeSignupDescriptionHeadDelegate": "Bitte erledigen Sie alle hier aufgeführten Aufgaben. Sobald Sie alle Aufgaben abgeschlossen haben, können Sie die Registrierung abschließen und am Auswahlverfahren teilnehmen. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie mit der Bewerbung zufrieden sind.",
-	"completeSignupDescription": "Bitte erledigen Sie alle Aufgaben gemeinsam mit Ihrem Delegationsleitung. Diese*r kann anschließend die Anmeldung abschließen, sodass sie am Auswahlverfahren teilnehmen können. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
+	"completeSignupDescription": "Bitte erledigen Sie alle Aufgaben gemeinsam mit Ihrer Delegationsleitung. Diese kann anschließend die Anmeldung abschließen, sodass Sie am Auswahlverfahren teilnehmen können. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
 	"completeSignupButton": "Anmeldung verbindlich abschließen und damit am Auswahlverfahren teilnehmen",
 	"conpleteSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"conpleteSignupWarningText": "Du hast zwar bereits eine Delegation erstellt bzw. bist einer Delegation beigetreten, aber die Anmeldung ist noch nicht abgeschlossen. Bitte schließe die Anmeldung rechtzeitig vor Anmeldeschluss ab, sodass wir die Anmeldung deiner Delegation berücksichtigen können.",
@@ -107,7 +107,7 @@
 	"todoEnterDelegationPreferencesHelp": "Geben Sie an, welche Länder oder nichtstaatlichen Akteure Sie vertreten möchten. Sie müssen mindestens 3 Präferenzen angeben.",
 	"todoCompleteSignup": "Anmeldung abschließen",
 	"todoCompleteSignupHelp": "Erledigen Sie alle Aufgaben und klicken Sie anschließend auf den Button unten, um die Anmeldung abzuschließen und am Auswahlverfahren teilzunehmen.",
-	"todoApplyForRole": "Auf eine (oder mehrere) Rollen bewerben",
+	"todoApplyForRole": "Auf eine (oder mehrere) Rolle(n) bewerben",
 	"todoApplyForRoleHelp": "Um sich auf mehrere Rollen zu bewerben, folgen Sie einfach dem Anmeldeprozess für Einzelbewerbungen erneut.",
 	"delegationStatus": "Delegationsstatus",
 	"delegationMembers": "Delegationsmitglieder",
@@ -130,11 +130,11 @@
 	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
 	"myAccount": "Mein Konto",
 	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
-	"completeData": "Daten Vervollständigen",
+	"completeData": "Daten vervollständigen",
 	"completeDataExplaination": "Vielen Dank für deine Registrierung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
 	"personalData": "Persönliche Daten",
 	"phoneNumber": "Telefonnummer",
-	"address": "Addresse",
+	"address": "Adresse",
 	"street": "Straße",
 	"streetAddition": "ggf. Zusatz",
 	"zipCode": "Postleitzahl",
@@ -173,10 +173,10 @@
 	"leaveDelegationConfirmation": "Möchtest du diese Delegation wirklich verlassen? Du kannst sie ohne den Zutrittscode nicht mehr betreten, wenn du sie verlässt.",
 	"makeHeadDelegateConfirmation": "Möchtest du wirklich die Delegationsleitung an dieses Mitglied übertragen? Du wirst dann zum normalen Delegationsmitglied ohne besondere Rechte.",
 	"deleteDelegationConfirmation": "Möchtest du diese Delegation wirklich löschen? Dies kann nicht rückgängig gemacht werden.",
-	"deleteApplicationConfirmation": "Möchten Sie diese Bewerbung wirklich löschen? Um die aktion rückgängig zu machen, müssen Sie sich erneut anmelden.",
-	"deleteAllApplicationsConfirmation": "Möchten Sie wirklich alle Bewerbungen löschen? Um die aktion rückgängig zu machen, müssen Sie sich erneut anmelden.",
+	"deleteApplicationConfirmation": "Möchten Sie diese Bewerbung wirklich löschen? Um die Aktion rückgängig zu machen, müssen Sie sich erneut anmelden.",
+	"deleteAllApplicationsConfirmation": "Möchten Sie wirklich alle Bewerbungen löschen? Um die Aktion rückgängig zu machen, müssen Sie sich erneut anmelden.",
 	"nationsPool": "Länderpool",
-	"nationsPoolDescription": "Hier sind die Länder aufgelistet, die Ihnen zur Auswahl stehen. Jeder Haken bedeutet, dass das jeweilige Land in dem entsprechenden Gremium einen Sitz hat. Die Spalte am Ende zeigt an, wie viele Delegierte das Land insgesamt auf der Konferenz hat. Sie können kein Land vertreten, dass weniger Plätze hat, als Sie Mitglieder in Ihrer Delegation haben.",
+	"nationsPoolDescription": "Hier sind die Länder aufgelistet, die Ihnen zur Auswahl stehen. Jeder Haken bedeutet, dass das jeweilige Land in dem entsprechenden Gremium einen Sitz hat. Die Spalte am Ende zeigt an, wie viele Delegierte das Land insgesamt auf der Konferenz hat. Sie können kein Land vertreten, das weniger Plätze hat, als Sie Mitglieder in Ihrer Delegation haben.",
 	"nsaPool": "Nichtstaatliche Akteure",
 	"nsaPoolDescription": "Hier sind die nichtstaatlichen Akteure (NAs) aufgelistet, die Ihnen zur Auswahl stehen. Delegierte von nichtstaatlichen Akteuren sind keinen konkreten Gremien zugeordnet. Dennoch ist auch die Anzahl der Delegierten pro NA begrenzt. Wenn Sie hier keine NA aufgelistet sehen, bedeutet das, dass keine NAs für die Konferenz vorgesehen sind oder die Anzahl der Mitglieder Ihrer Delegation die Anzahl der verfügbaren Plätze übersteigt.",
 	"yourPreferences": "Ihre Auswahl",
@@ -186,7 +186,7 @@
 	"completeSignupSuccess": "Anmeldung erfolgreich abgeschlossen",
 	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Bitte sehen Sie von Nachfragen ab.",
 	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die Delegation nicht mehr löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
-	"noDangerZoneOptionsSingleParticipants": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie ihre Einzelbewerbung weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
+	"noDangerZoneOptionsSingleParticipants": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie Ihre Einzelbewerbung weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
 	"profileSettings": "Profilverwaltung",
 	"logout": "Logout",
 	"feedback": "Feedback",
@@ -201,7 +201,7 @@
 	"pickIcon": "Icon auswählen",
 	"search": "Suche",
 	"submit": "Senden",
-	"signupNow": "Jetzt Anmelden",
+	"signupNow": "Jetzt anmelden",
 	"completeSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"completeSignupWarningText": "Obwohl Sie bereits eine Delegation angelegt haben oder einer beigetreten sind, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Anmeldung Ihrer Delegation im Auswahlverfahren berücksichtigen können.",
 	"completeSignupWarningTextSingleParticipant": "Obwohl Sie sich bereits für eine Rolle beworben haben, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir Ihre Bewerbung im Auswahlverfahren berücksichtigen können.",
@@ -226,7 +226,7 @@
 	"willBePresentAtConference": "Ich werde an der Konferenz teilnehmen.",
 	"willNotBePresentAtConference": "Ich werde <strong><u>nicht</u></strong> an der Konferenz teilnehmen.",
 	"presentAtConference": "Anwesend auf der Konferenz",
-	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
+	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status Ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
 	"noConferenceOpenForRegistrationText": "Es gibt derzeit keine Konferenzen, für die Sie sich anmelden können. Bitte informieren Sie sich auf der Website der jeweiligen Konferenz über die Anmeldezeiträume.",
@@ -237,7 +237,7 @@
 	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!",
 	"rights": "Rechte",
 	"cookieNoticeHeading": "Wir verwenden Cookies",
-	"cookieNoticeDescription": "Delegator verwendet technisch notwendige Cookies um das Benutzen der App zu ermöglichen.",
+	"cookieNoticeDescription": "Delegator verwendet technisch notwendige Cookies, um das Benutzen der App zu ermöglichen.",
 	"acceptAll": "Alle akzeptieren",
 	"rejectAll": "Alle ablehnen",
 	"managePreferences": "Einstellungen verwalten",
@@ -305,7 +305,7 @@
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
 	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen (wenn verfügbar).",
-	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als Betreuende Person können sie nur bereits erstellte Delegationen überwachen.",
+	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person können Sie nur bereits erstellte Delegationen überwachen.",
 	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen Ihre Schüler*innen die Delegation selbst erstellen. Sie können den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
 	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben Ihre Schüler*innen bereits Delegationen erstellt?",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer1": "Ja, haben sie.",
@@ -314,5 +314,5 @@
 	"youAreAlreadySupervisor": "Sie sind bereits ein Betreuer in dieser Konferenz.",
 	"youAreAlreadySingleParticipant": "Sie sind bereits ein Einzelteilnehmer in dieser Konferenz.",
 	"youAreAlreadyDelegationMember": "Sie sind bereits ein Delegationsmitglied in dieser Konferenz.",
-	"youAreAlreadyTeamMember": "Sie sind bereits ein Team Mitglied in dieser Konferenz."
+	"youAreAlreadyTeamMember": "Sie sind bereits ein Teammitglied in dieser Konferenz."
 }
