chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -15,22 +15,22 @@
 	"committee": "Gremium",
 	"noConferenceHeading": "Keine Konferenz",
 	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz angemeldet.",
-	"homeHeroSub": "Zentrale Anmeldeplattform für DMUN-Konferenzen",
+	"homeHeroSub": "Gemeinsame Anmeldeplattform für MUN-SH und MUNBW",
 	"home": "Startseite",
-	"homeRegistration": "Konferenzanmeldung",
-	"homeRegistrationSub": "Melden Sie sich für die nächste Konferenz an, indem Sie sich bewerben",
-	"homeRegistrationBtn": "Zur Anmeldung",
-	"homeYourConferences": "Ihre Konferenzen",
-	"homeYourConferencesSub": "Sehen Sie sich die Konferenzen an, an denen Sie teilnehmen",
+	"homeRegistration": "Zur Konferenz anmelden",
+	"homeRegistrationSub": "Melde dich für eine Konferenz an – alleine oder in einer Gruppe",
+	"homeRegistrationBtn": "Jetzt anmelden",
+	"homeYourConferences": "Meine Konferenzen",
+	"homeYourConferencesSub": "Vervollständige eine bestehende Anmeldung und sieh nach, welche Aufgaben noch zu erledigen sind",
 	"homeYourConferencesBtn": "Zum Dashboard",
-	"homeDraftDisclaimerHeader": "Seite im Aufbau",
-	"homeDraftDisclaimer": "Diese Seite befindet sich noch im Aufbauprozess. Bitte haben Sie Verständnis, dass einerseits noch nicht alle Funktionen verfügbar sind und es außerdem zu Fehlern kommen kann. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Anwendung weiter aufzubauen.",
-	"homeDraftPleaseHelp": "Um Ihnen das bestmögliche Erlebnis zu bereiten, sind wir auf Ihre Hilfe angewiesen: Wenn Sie einen Vorschlag haben oder Ihnen ein Bug, Problem oder Fehler auffällt, dann melden Sie dies gerne über unser Feedback-Board.",
-	"homeHelpWithTechnicalIssuesHeadline": "Hilfe bei technischen Problemen",
-	"homeHelpWithTechnicalIssues": "Wenn Sie technische Probleme haben, helfen wir Ihnen gerne auch persönlich weiter. Wenden Sie sich dafür entweder an die Teilnehmendenbetreuung des jeweiligen Projektes oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
+	"homeDraftDisclaimerHeader": "Diese Seite ist noch im Aufbau",
+	"homeDraftDisclaimer": "<em>MUNify</em> ist seit 2024 unsere neue Anmeldeplattform. Es sind noch nicht alle Funktionen verfügbar und manchmal kann es zu Fehlern kommen. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Plattform weiterzuentwickeln. Vielen Dank für dein Verständnis!",
+	"homeDraftPleaseHelp": "Wenn dir beim Anmeldevorgang ein Fehler oder Problem auffällt oder du einen Verbesserungsvorschlag hast, melde es gern über unser Feedback-Portal.",
+	"homeHelpWithTechnicalIssuesHeadline": "Hast du technische Probleme?",
+	"homeHelpWithTechnicalIssues": "Wir helfen dir gern persönlich weiter. Wende dich an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
 	"homeAboutUs": "Über uns",
-	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet, und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
+	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
 	"selectConference": "Wählen Sie zuerst die Konferenz aus, zu der Sie sich gerne anmelden möchten.",
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
@@ -189,8 +189,8 @@
 	"noDangerZoneOptionsSingleParticipants": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie ihre Einzelbewerbung weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
 	"profileSettings": "Profilverwaltung",
 	"logout": "Logout",
-	"feedback": "Feedback",
-	"feedbackBoard": "Feedback-Board",
+	"feedback": "Wir brauchen dein Feedback!",
+	"feedbackBoard": "Feedback geben",
 	"activeConferences": "Aktive Konferenzen",
 	"upcomingConferences": "Kommende Konferenzen",
 	"pastConferences": "Vergangene Konferenzen",
