chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -129,14 +129,14 @@
 	"signupForSupervisors": "Anmeldung für Betreuer*innen",
 	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
 	"myAccount": "Mein Konto",
-	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
-	"completeData": "Daten Vervollständigen",
+	"herYouFindYourAccountInfo": "Hier findest du deine persönlichen Daten und Einstellungen zu deinem Konto.",
+	"completeData": "Daten vervollständigen",
 	"completeDataExplaination": "Vielen Dank für deine Anmeldung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
 	"personalData": "Persönliche Daten",
 	"phoneNumber": "Telefonnummer",
-	"address": "Addresse",
-	"street": "Straße",
-	"streetAddition": "ggf. Zusatz",
+	"address": "Adresse",
+	"street": "Straße und Hausnummer",
+	"streetAddition": "ggf. Adresszusatz",
 	"zipCode": "Postleitzahl",
 	"city": "Stadt",
 	"pleaseSelectCountry": "Land",
@@ -163,9 +163,9 @@
 	"email": "E-Mail",
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
-	"deleteAccountGPDR": "Wenn Sie Ihr Konto DSGVO-konform löschen lassen möchten, wenden Sie sich bitte an die Teilnehmendenbetreuung einer Konferenz oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
-	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
-	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
+	"deleteAccountGPDR": "Wenn du dein Konto DSGVO-konform löschen lassen möchtest, wende dich bitte an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
+	"receiveGeneralInformation": "E-Mails mit Informationen zum Projekt erhalten",
+	"receiveJoinTeamInformation": "E-Mails mit Ausschreibungen für Teampositionen erhalten",
 	"activeMembers": "Aktive Mitglieder",
 	"removeMember": "Mitglied entfernen",
 	"removeMemberConfirmation": "Möchtest du dieses Mitglied wirklich entfernen?",
