chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://inlang.com/schema/inlang-message-format",
 	"signup": "Anmelden",
-	"registerNow": "Jetzt Anmelden",
+	"registerNow": "Jetzt anmelden",
 	"dashboard": "Dashboard",
 	"registration": "Anmeldung",
 	"admininstration": "Administration",
@@ -14,7 +14,7 @@
 	"backToHome": "Zurück zur Homepage",
 	"committee": "Gremium",
 	"noConferenceHeading": "Keine Konferenz",
-	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz angemeldet.",
+	"noConferenceText": "Du bist bisher bei keiner Konferenz angemeldet.",
 	"homeHeroSub": "Gemeinsame Anmeldeplattform für MUN-SH und MUNBW",
 	"home": "Startseite",
 	"homeRegistration": "Zur Konferenz anmelden",
@@ -201,7 +201,7 @@
 	"pickIcon": "Icon auswählen",
 	"search": "Suche",
 	"submit": "Senden",
-	"signupNow": "Jetzt Anmelden",
+	"signupNow": "Jetzt anmelden",
 	"completeSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"completeSignupWarningText": "Obwohl Sie bereits eine Delegation angelegt haben oder einer beigetreten sind, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Anmeldung Ihrer Delegation im Auswahlverfahren berücksichtigen können.",
 	"completeSignupWarningTextSingleParticipant": "Obwohl Sie sich bereits für eine Rolle beworben haben, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir Ihre Bewerbung im Auswahlverfahren berücksichtigen können.",
