chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -25,17 +25,17 @@
 	"homeYourConferencesBtn": "Zum Dashboard",
 	"homeDraftDisclaimerHeader": "Diese Seite ist noch im Aufbau",
 	"homeDraftDisclaimer": "<em>MUNify</em> ist seit 2024 unsere neue Anmeldeplattform. Es sind noch nicht alle Funktionen verfügbar und manchmal kann es zu Fehlern kommen. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Plattform weiterzuentwickeln. Vielen Dank für dein Verständnis!",
-	"homeDraftPleaseHelp": "Wenn dir beim Anmeldevorgang ein Fehler oder Problem auffällt oder du einen Verbesserungsvorschlag hast, melde es gern über unser Feedback-Portal.",
+	"homeDraftPleaseHelp": "Wir brauchen dein Feedback! Wenn dir beim Anmeldevorgang ein Fehler oder Problem auffällt oder du einen Verbesserungsvorschlag hast, melde es gern über unser Feedback-Portal.",
 	"homeHelpWithTechnicalIssuesHeadline": "Hast du technische Probleme?",
 	"homeHelpWithTechnicalIssues": "Wir helfen dir gern persönlich weiter. Wende dich an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
 	"homeAboutUs": "Über uns",
 	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
-	"selectConference": "Wählen Sie zuerst die Konferenz aus, zu der Sie sich gerne anmelden möchten.",
+	"selectConference": "Zu welcher Konferenz möchtest du dich anmelden?",
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
 	"unknownLanguage": "Sprache unbekannt",
-	"registrationOpen": "Anmeldung offen bis {date}",
+	"registrationOpen": "Anmeldung möglich bis {date}",
 	"registrationClosed": "Anmeldung geschlossen",
 	"registrationNotYetOpen": "Anmeldung startet am {date}",
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
@@ -187,9 +187,9 @@
 	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Bitte sehen Sie von Nachfragen ab.",
 	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die Delegation nicht mehr löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
 	"noDangerZoneOptionsSingleParticipants": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie ihre Einzelbewerbung weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
-	"profileSettings": "Profilverwaltung",
-	"logout": "Logout",
-	"feedback": "Wir brauchen dein Feedback!",
+	"profileSettings": "Meine persönlichen Daten",
+	"logout": "Abmelden",
+	"feedback": "Feedback!",
 	"feedbackBoard": "Feedback geben",
 	"activeConferences": "Aktive Konferenzen",
 	"upcomingConferences": "Kommende Konferenzen",
