chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -41,9 +41,9 @@
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
-	"conferenceSignupIntroduction": "Sie haben verschiedene Möglichkeiten, sich anzumelden. Auf einen Staat oder eine*n nichtstaatliche*n Akteur*in bewerben Sie sich als Team von mindestens 2 Personen. Auf spezielle Rollen wie als Mitglied der Konferenzpresse bewerben Sie sich alleine.",
-	"signUpAssistant": "Anmeldeassistent",
-	"signUpAssistantDescription": "Der Anmeldeprozess kann auf den ersten Blick kompliziert wirken. Nutzen Sie den Anmeldeassistenten, um einen Überblick zu erhalten.",
+	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Team von mindestens 2 Personen an. Für <strong>spezielle Rollen</strong> wie die Konferenzpresse bewirbst du dich alleine.",
+	"signUpAssistant": "Unsicher, wie du dich anmelden sollst?",
+	"signUpAssistantDescription": "Wenn du nicht sicher bist, welche Anmeldung für dich die richtige ist, kannst du unseren Anmeldeassistenten benutzen.",
 	"openAssistant": "Assistent starten",
 	"createDelegation": "Delegation erstellen",
 	"createDelegationDescription": "Hier kannst du als Delegationsleiter*in eine neue Delegation anlegen und Menschen zu der Delegation einladen",
@@ -237,7 +237,7 @@
 	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!",
 	"rights": "Rechte",
 	"cookieNoticeHeading": "Wir verwenden Cookies",
-	"cookieNoticeDescription": "Delegator verwendet technisch notwendige Cookies, um das Benutzen der App zu ermöglichen.",
+	"cookieNoticeDescription": "Wir verwenden technisch notwendige Cookies, um das Benutzen der App zu ermöglichen.",
 	"acceptAll": "Alle akzeptieren",
 	"rejectAll": "Alle ablehnen",
 	"managePreferences": "Einstellungen verwalten",
@@ -277,20 +277,20 @@
 	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmen Sie bitte für jede Delegation eine*n Delegationsleiter*in und lassen sie Ihre Schüler*innen die Delegation anlegen.",
 	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem Sie sich der Delegation als Betreuer*in anschließen können.",
 	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent vom MUNify Delegator.",
-	"assistantFlowParticipantOrSupervisor2": "Möchten Sie sich als Teilnehmende*r oder als Betreuer*in anmelden?",
-	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte mich als Teilnehmende*r anmelden.",
-	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte mich als Betreuer*in anmelden.",
+	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent von MUNify, der gemeinsamen Anmeldeplattform für MUN-SH und MUNBW. Ich helfe dir bei der Wahl der richtigen Anmeldung.",
+	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
+	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
+	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte nicht selbst teilnehmen, sondern mich als Betreuer*in anmelden.",
 	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Dann sind Sie hier genau richtig.",
 	"assistantFlowPartnersCreatedDelegation2": "Da die Anmeldung als Gruppe auch geschlossen stattfinden muss, müssen Sie zunächst klären, ob schon jemand Ihrer Gruppe eine Delegation erstellt hat, der sie beitreten können.",
 	"assistantFlowPartnersCreatedDelegation3": "Der/die Ersteller*in einer Delegation wird automatisch zur Delegationsleiter*in",
 	"assistantFlowPartnersCreatedDelegation4": "Haben sie schon eine*n Delegationsleiter*in, der/die bereits eine Delegation erstellt hat?",
 	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt bereits eine Delegation.",
 	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch hat niemand eine Delegation erstellt.",
-	"assistantFlowRole1": "Wunderbar – herzlich Willkommen! Damit ich Sie richtig durch den Anmeldeprozess führen kann, verraten Sie mir doch, welche Rolle Sie gerne einnehmen möchten.",
-	"assistantFlowRole2": "Hier eine kleine Übersicht über Ihre Möglichkeiten inklusive Erläuterungen:",
-	"assistantFlowRoleDelegate1": "Delegierte*r",
-	"assistantFlowRoleDelegate2": "Als Delegierte*r vertreten Sie die konkreten Interessen eines Landes in einem der Gremien der Konferenz.",
+	"assistantFlowRole1": "Herzlich willkommen – wir freuen uns auf dich! Du musst dir zunächst aussuchen, welche Rolle du auf der Konferenz einnehmen möchtest.",
+	"assistantFlowRole2": "Du kannst dir eine der folgenden Rollen aussuchen:",
+	"assistantFlowRoleDelegate1": "Delegierte*r eines Staates",
+	"assistantFlowRoleDelegate2": "Als Delegierte*r vertrittst du die konkreten Interessen eines Staates in einem Gremium. Zum Beispiel: <em>Schweden im Wirtschafts- und Sozialrat</em> oder <em>Kenia in der Generalversammlung</em>.",
 	"assistantFlowRoleNSA1": "Vertreter*in eine*r NA",
 	"assistantFlowRoleNSA2": "Als Vertreter*in eine*r Nichtstaatlichen Akteur*in (NA) vertreten Sie eine Organisation.",
 	"assistantFlowRoleNSA3": "Dabei sind Sie nicht an ein bestimmtes Gremium gebunden sondern können in den Gremien einfluss nehmen, die für Ihre Organisation die wichtigsten Themen behandeln",
