🐞 fix (App Frontend): Make nation pools scrollable on mobile (#58)
* 🐞 fix (App Frontend): Make nation pools scrollable on mobile
branch: 48-mobile-pool-table-für-nations-and-nsas-not-x-scrollable-in-roleapplication-dialog

* 🐞 fix (App Frontend): delegation size not being displayed
branch: 48-mobile-pool-table-für-nations-and-nsas-not-x-scrollable-in-roleapplication-dialog

* ⬆️ improvement (MUNify): add types to getNumOfSeatsPerNation helper function
branch: 48-mobile-pool-table-für-nations-and-nsas-not-x-scrollable-in-roleapplication-dialog

---------

Co-authored-by: m1212e <14091540+m1212e@users.noreply.github.com>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -229,6 +229,7 @@
 	"presentAtConference": "Anwesend auf der Konferenz",
 	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status Ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
+	"addAnotherApplication": "Weitere Bewerbung hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
 	"noConferenceOpenForRegistrationText": "Es gibt derzeit keine Konferenzen, für die Sie sich anmelden können. Bitte informieren Sie sich auf der Website der jeweiligen Konferenz über die Anmeldezeiträume.",
 	"rotateCode": "Code erneuern",
